@@ -1,3 +1,12 @@
+2007-12-21  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh: (CygbuildCygcheckLibraryDepListFull): New,
+	replaces `CygbuildObjDumpLibraryDepList'.
+	(CygbuildCygcheckLibraryDepMain): Use
+	`CygbuildCygcheckLibraryDepListFull'.
+	(CygbuildCygcheckLibraryDepMain): Add error checking.
+	(CygbuildCygcheckLibraryDepGrepPgkNamesMain): Add error checking.
+
 2007-12-20  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Mention command
